# rokugo

./: Cargo.toml
crates/ast/: Cargo.toml
crates/ast/src/: lib.rs
crates/backend-common/: Cargo.toml
crates/backend-common/src/: lib.rs
crates/common/: Cargo.toml
crates/common-tests/: Cargo.toml
crates/common-tests/src/: compilation_tools.rs  lib.rs
crates/common/src/: color.rs
crates/diagnostic/: Cargo.toml
crates/diagnostic/src/: files.rs  lib.rs  render.rs
crates/ir/: Cargo.toml  README.md
crates/ir-generated/: Cargo.toml  README.md
crates/ir-generated/src/: lib.rs
crates/ir-generated/src/emit/: emitter.rs  register_allocator.rs
crates/ir-generated/src/errors/: register.rs
crates/ir-generated/src/function/: mod.rs
crates/ir-generated/src/tests/: mod.rs
crates/ir-generated/src/tests/emit/: emitter.rs  mod.rs  register_allocator.rs
crates/ir-generated/src/tests/function/: mod.rs  return_value.rs
crates/ir/src/: container.rs  instruction_read_error.rs  lib.rs  op_code.rs  register.rs
crates/ir/src/archive/: load_error.rs  mod.rs
crates/ir/src/function/: collection.rs  load_error.rs  mod.rs
crates/ir/src/register/: chill.rs  general_purpose.rs  mod.rs  natural.rs  special.rs
crates/ir/src/register/traits/: memory.rs  mod.rs  naturals.rs
crates/ir/src/type/: collection.rs  mod.rs
crates/ir/src/type/built_in/: mod.rs
crates/lexis/: Cargo.toml
crates/lexis/src/: lexer.rs  lib.rs  token.rs  token_set.rs
crates/lexis/tests/: lexis.rs
crates/mir/: Cargo.toml  README.md
crates/mir/src/: archive_builder.rs  function_builder.rs  lib.rs  variable_builder.rs
crates/mir/src/emit/: container.rs  content.rs  emitter.rs  mod.rs  op_code.rs  op_code_display.rs  parameter.rs
crates/mir/src/tests/: mod.rs  op_code_display.rs
crates/mir/src/tests/emit/: container_iter.rs  content_iter.rs  emitter.rs  mod.rs
crates/mir/tests/: op_code_display.rs
crates/mir2ir/: Cargo.toml
crates/mir2ir/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: expression.rs  lib.rs  skip_list.rs
crates/parser/src/expression/: precedence.rs
crates/parser/tests/: expression.rs
crates/query/: Cargo.toml
crates/query/benches/: fib.rs
crates/query/src/: arena.rs  just_about_anything.rs  lib.rs  name.rs
crates/query/tests/: rec_fib.rs
crates/rokugo/: Cargo.toml
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/source-code/: Cargo.toml
crates/source-code/src/: lib.rs
docs/: language.md
docs/ir/: README.md  registers.md
docs/ir/register/: chilling.md
