[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]

criterion = "0.5.1"
dashmap = "5.5.3"
enum-iterator = "2.0.0"
indoc = "2.0.4"
parking_lot = "0.12.1"
rayon = "1.9.0"
rustc-hash = "1.1.0"
termcolor = "1.1.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
bytemuck = "1.15.0"
num_enum = "0.7.2"

rokugo-ast.path = "crates/ast"
rokugo-backend-common.path = "crates/backend-common"
rokugo-common.path = "crates/common"
rokugo-common-tests.path = "crates/common-tests"
rokugo-diagnostic.path = "crates/diagnostic"
rokugo-ir.path = "crates/ir"
rokugo-ir-generated.path = "crates/ir-generated"
rokugo-lexis.path = "crates/lexis"
rokugo-mir.path = "crates/mir"
rokugo-mir2ir.path = "crates/mir2ir"
rokugo-parser.path = "crates/parser"
rokugo-query.path = "crates/query"
rokugo-runtime.path = "crates/runtime"
rokugo-source-code.path = "crates/source-code"
rokugo.path = "crates/rokugo"

[profile.release]
debug = true
