[package]
name = "rokugo-query"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap.workspace = true
rustc-hash.workspace = true
parking_lot.workspace = true
rayon.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "fib"
harness = false
